<resources>
    <string name="app_name">How I Quizzed Your Mother</string>
    <string name="how_i_quizzed">How I Quizzed</string>
    <string name="your_mother">Your Mother</string>
    <string name="number_one">1.</string>
    <string name="number_two">2.</string>
    <string name="number_three">3.</string>
    <string name="number_four">4.</string>
    <string name="number_five">5.</string>
    <string name="number_six">6.</string>
    <string name="number_seven">7.</string>
    <string name="number_eight">8.</string>
    <string name="number_nine">9.</string>
    <string name="number_ten">10.</string>
    <string name="color_mother_umbrella">What color was the mother\'s umbrella?</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="name_favorite_pub">What was the name of their favorite pub?</string>
    <string name="paddys_pub">Paddy\'s Pub</string>
    <string name="the_griffin">The Griffin</string>
    <string name="maclarens_pub">MacLaren\'s Pub</string>
    <string name="joes">Joe\'s</string>
    <string name="marshall_home_state">Which was Marshall\'s home state?</string>
    <string name="minnesota">Minnesota</string>
    <string name="wyoming">Wyoming</string>
    <string name="missouri">Missouri</string>
    <string name="north_dakota">North Dakota</string>
    <string name="fruit_involved">Which fruit was involved in one of the biggest mysteries of the series?</string>
    <string name="watermelon">Watermelon</string>
    <string name="pineapple">Pineapple</string>
    <string name="avocado">Avocado</string>
    <string name="papaya">Papaya</string>
    <string name="lily_job_offer">Lily got a job offer to work in which European country?</string>
    <string name="italy">Italy</string>
    <string name="germany">Germany</string>
    <string name="france">France</string>
    <string name="spain">Spain</string>
    <string name="members_same_college">Which of the members attended the same college? (select three)</string>
    <string name="marshall">Marshall</string>
    <string name="barney">Barney</string>
    <string name="ted">Ted</string>
    <string name="lily">Lily</string>
    <string name="musical_instrument">What musical instrument did Ted steal for Robin?</string>
    <string name="guitar">Guitar</string>
    <string name="flute">Flute</string>
    <string name="trumpet">Trumpet</string>
    <string name="horn">Horn</string>
    <string name="last_girl_ted_dated">What was the last girl that Ted dated before he met the mother?</string>
    <string name="stella">Stella</string>
    <string name="jeannette">Jeannette</string>
    <string name="victoria">Victoria</string>
    <string name="zoey">Zoey</string>
    <string name="animal_ted_fight">What animal did Ted fight on his 31st birthday?</string>
    <string name="monkey">Monkey</string>
    <string name="koala">Koala</string>
    <string name="goat">Goat</string>
    <string name="raccoon">Raccoon</string>
    <string name="name_mother">Write the name of the mother</string>
    <string name="write_here">Write Here</string>
    <string name="submit">Submit</string>
    <string name="credit_one">Quiz App Project | Android Basics Nanodegree</string>
    <string name="credit_two">Student Name: Kevin Baltodano</string>
    <string name="credit_three">Art by http://tomoxnam.deviantart.com</string>
    <string name="you_scored">You Scored</string>
    <string name="out_of_ten">out of 10!</string>
    <string name="legen_dary">LEGEN...wait for it...DARY!</string>
    <string name="try_again">Try Again!</string>
</resources>
